objects/GSPO_Qualification_Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>It contains the description of the revenue which has been entered.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GSPO_Qualification__c</fullName>
        <description>This field contains the GSPO record name to which the GSPO Qualification Revenue records are related to.</description>
        <label>GSPO Qualification</label>
        <referenceTo>Qualification__c</referenceTo>
        <relationshipLabel>GSPO Qualification Revenues</relationshipLabel>
        <relationshipName>GSPO_Qualification_Revenues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Revenue_000__c</fullName>
        <description>It contains the revenue amount of the corresponding GSPO Record.</description>
        <label>Revenue ($'000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Source__c</fullName>
        <description>Contains the different revenue sources.</description>
        <label>Revenue Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco UCS</fullName>
                </value>
                <value>
                    <fullName>Cisco Hypervisor</fullName>
                </value>
                <value>
                    <fullName>Cisco Nexus</fullName>
                </value>
                <value>
                    <fullName>Cisco Other</fullName>
                </value>
                <value>
                    <fullName>Partner Ecosystems</fullName>
                </value>
                <value>
                    <fullName>Partner Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This object contains all the Revenue fields related to GSPO Qualification.</description>
    <label>GSPO Qualification Revenue</label>
    <nameField>
        <displayFormat>GSPO REV - {00000}</displayFormat>
        <label>GSPO Qualification Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSPO Qualification Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>GSPO_Revenue_Mandatory</fullName>
        <active>true</active>
        <description>GSPO Qualification Revenue is mandatory</description>
        <errorConditionFormula>ISBLANK( Revenue_000__c )</errorConditionFormula>
        <errorDisplayField>Revenue_000__c</errorDisplayField>
        <errorMessage>Please enter the Revenue value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Revenue_Source</fullName>
        <active>true</active>
        <description>Making the Revenue Source Field mandatory</description>
        <errorConditionFormula>TEXT( Revenue_Source__c )  = ''</errorConditionFormula>
        <errorDisplayField>Revenue_Source__c</errorDisplayField>
        <errorMessage>Please select the Revenue Source</errorMessage>
    </validationRules>
</CustomObject>